Separates out the model from the view
The views now get their data from their js controllers, rather than having
hard coded values in the html. For now, the data model has been
implemented as a map in the controllers class. We use the name of the
block as the key. Updates the unit and e2e tests.

--- a/block-explorer/app/partials/block-details.html
+++ b/block-explorer/app/partials/block-details.html
@@ -18,13 +18,13 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>Block 1</h1>
-      <h2>Hash: 00000000000000001e8d6829a8a21adc5d38d0a473b144b6765798e61f98bd1d</h2>
-      <p>Version: 1</p>
-      <p>Previous Block: 00000000000008a3a41b85b8b29ad444def299fee21793cd8b9e567eab02cd81</p>
-      <p>Merkle Root: 2b12fcf1b09288fcaff797d71e950e71ae42b91e8bdb2304758dfcffc2b620e3</p>
-      <p>Time: 1305998791</p>
-      <p>Nonce: 2504433986</p>
+      <h1>{{block.name}}</h1>
+      <h2>Hash: {{block.hash}}</h2>
+      <p>Version: {{block.version}}</p>
+      <p>Previous Block: {{block.previousBlock}}</p>
+      <p>Merkle Root: {{block.merkleRoot}}</p>
+      <p>Time: {{block.time}}</p>
+      <p>Nonce: {{block.nonce}}</p>
 
       <h2>Previous Transactions</h2>
       <div class="row">
