--- a/block-explorer/app/partials/block-list.html
+++ b/block-explorer/app/partials/block-list.html
@@ -32,36 +32,25 @@
 <!-- Carousel
 ================================================== -->
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li ng-repeat="block in blocks" data-target="#myCarousel" data-slide-to="{{$index}}" ng-class="{active: $first}"></li>
   </ol>
   <div class="carousel-inner">
-    <div class="item active">
-      <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+    <div class="item" ng-repeat="block in blocks" ng-class="{active: $first}">
+      <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Block">
       <div class="container">
         <div class="carousel-caption">
-          <h1>Block 1</h1>
-          <p>Hash: 00000000000000001e8d6829a8a21adc5d38d0a473b144b6765798e61f98bd1d</p>
-          <p><a class="btn btn-lg btn-primary" href="#/block-details" role="button">Details</a></p>
-        </div>
-      </div>
-    </div>
-    <div class="item">
-      <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>Block 2</h1>
-          <p>Hash: 00000000000000001e8d6829a8a21adc5d38d0a473b144b6765798e61f98bd1d</p>
-          <p><a class="btn btn-lg btn-primary" href="#/block-details" role="button">Details</a></p>
+          <h1>{{block.name}}</h1>
+          <p>Hash: {{block.hash}}</p>
+          <p><a class="btn btn-lg btn-primary" href="#/block-list/{{block.name}}" role="button">Details</a></p>
         </div>
       </div>
     </div>
   </div>
+  <!-- Can't get buttons to work properly at the moment, so I'm disabling them for now
   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
   <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-</div><!-- /.carousel -->
+</div> --> <!-- /.carousel -->
 
 <div>
   <!-- FOOTER -->
