Updates block explorer so that we are getting our data from the bitcoin service
We get the latest block, then get the 9 blocks previous to that. Once we
have a chain of 10, we update our app to display the block hashes in a
list on our main page.

--- a/block-explorer/app/css/carousel.css
+++ b/block-explorer/app/css/carousel.css
@@ -61,6 +61,11 @@ body {
   height: 500px;
 }
 
+/* Default styles for indicator elements */
+.carousel-indicators li { 
+  visibility: hidden;
+}
+
 
 
 /* MARKETING CONTENT
