--- a/block-explorer/app/partials/block-details.html
+++ b/block-explorer/app/partials/block-details.html
@@ -18,11 +18,10 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1>{{block.name}}</h1>
       <h2>Hash: {{block.hash}}</h2>
-      <p>Version: {{block.version}}</p>
-      <p>Previous Block: {{block.previousBlock}}</p>
-      <p>Merkle Root: {{block.merkleRoot}}</p>
+      <p>Version: {{block.ver}}</p>
+      <p>Previous Block: {{block.prev_block}}</p>
+      <p>Merkle Root: {{block.mrkl_root}}</p>
       <p>Time: {{block.time}}</p>
       <p>Nonce: {{block.nonce}}</p>
 
