Updates the data stored by our model
We now just store the hashes we have retrieved rather than storing all
the block data. This is because the amount of block data stored could get
very large if we were querying a large number of blocks, for example by
going back and forward through pages of 10. We currently query the
bitcoin service each time we choose a block by hash. We could improve
this by storing block data locally, and then loading it locally as needed.

We no longer use the carousel on the main page, as it makes an assumption
we know how many pages we have. In reality, we will use next and previous
buttons to navigate pages, and it is likely that going back will load
a new page of data. The next and previous buttons are wired up to our
controller, but the controller doesn't do anything with those commands yet.

--- a/block-explorer/app/partials/block-list.html
+++ b/block-explorer/app/partials/block-list.html
@@ -6,22 +6,25 @@
   </form>
 </div>
 
-<div class="page-header">
-  <h2>Block Explorer</h2>
-</div>
-
 <!-- Carousel
 ================================================== -->
-<div>
-  <h3 class="text-center">Latest 10 Blocks</h3>
-  <carousel>
-    <slide ng-repeat="page in pages" active="slide.active">
-      <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-      <div class="carousel-caption">
-        <div class="list-group">
-          <a href="#/block-list/{{block.hash}}" class="list-group-item" ng-repeat="block in blocks | filter: query">{{block.hash}}</a>
+<div class="container">
+  <div class="jumbotron">
+    <h2 class="text-center">Latest 10 Blocks</h2>
+    <div class="row">
+        <div class="col-md-1">
+          <a href="#/block-list" role="button">
+            <span class="glyphicon glyphicon-chevron-left" ng-click="getPrevious()"></span>
+          </a>
         </div>
-      </div>
-    </slide>
-  </carousel>
+        <div class="col-md-10">
+          <a href="#/block-list/{{block}}" class="list-group-item" ng-repeat="block in blocks | filter: query">{{block}}</a>
+        </div>
+        <div class="col-md-1">
+          <a href="#/block-list" role="button">
+            <span class="glyphicon glyphicon-chevron-right" ng-click="getNext()"></span>
+          </a>
+        </div>
+    </div>
+  </div>
 </div>
