Update our data model so it contains multiple pages of data
As we go back a page, we load in the previous 10 blocks into an array
which we prepend to our existing data. Each page of 10 hashes is stored in
an array, and the arrays are stored within our model. I've now added
implementations for the next and previous functions within our block list
controller.

--- a/block-explorer/app/partials/block-list.html
+++ b/block-explorer/app/partials/block-list.html
@@ -1,16 +1,6 @@
-<div class="navbar-collapse collapse">
-  <form class="navbar-form navbar-right" role="form">
-    <div class="form-group">
-      <input type="text" placeholder="Search term" class="form-control" ng-model="query">
-    </div>
-  </form>
-</div>
-
-<!-- Carousel
-================================================== -->
 <div class="container">
   <div class="jumbotron">
-    <h2 class="text-center">Latest 10 Blocks</h2>
+    <h2 class="text-center">Block Explorer</h2>
     <div class="row">
         <div class="col-md-1">
           <a href="#/block-list" role="button">
@@ -18,11 +8,18 @@
           </a>
         </div>
         <div class="col-md-10">
+          <div class="navbar-collapse collapse">
+            <form class="navbar-form navbar-right" role="form">
+              <div class="form-group">
+                <input type="text" placeholder="Search term" class="form-control" ng-model="query">
+              </div>
+            </form>
+          </div>
           <a href="#/block-list/{{block}}" class="list-group-item" ng-repeat="block in blocks | filter: query">{{block}}</a>
         </div>
         <div class="col-md-1">
           <a href="#/block-list" role="button">
-            <span class="glyphicon glyphicon-chevron-right" ng-click="getNext()"></span>
+            <span class="glyphicon glyphicon-chevron-right" ng-click="getNext()" ng-show="!isLastPage"></span>
           </a>
         </div>
     </div>
